apps/jellyseerr/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyseerr.oglesby.io`)
      kind: Rule
      services:
        - name: jellyseerr
          port: 5055
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyseerr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: jellyseerr
          port: 5055
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
